JDK 21 migration